<resources>
    <string name="back">back</string>
    <string name="sfb_gallery">Gallery</string>
    <string name="sfb_PDF">PDF</string>
    <string name="sfb_audio">Audio</string>
    <string name="sfb_file">File</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="internal_storage_subTitle">Browse your internal storage</string>
    <string name="external_storage_subTitle">Browse your SD card</string>
    <string name="download_folder">Download</string>
    <string name="download_folder_subTitle">%2d Files</string>
    <string name="recent">"Recent files "</string>
    <string name="home">Home</string>
    <string name="sfb_inner_one_file_count_text">%2d file</string>
    <string name="sfb_inner_more_than_one_file_count_text">%2d files</string>
    <string name="sfb_done">done</string>
    <string name="sfb_pick_from_gallery">Pick from gallery</string>
    <string name="sfb_search">Search</string>
    <string name="sfb_clear">Clear</string>
    <string name="sfb_file_browser_toolbar_title">Select file</string>
    <string name="sfb_video_file_browser_toolbar_title">Select video</string>
    <string name="sfb_pdf_file_browser_toolbar_title">Select pdf</string>
    <string name="sfb_audio_file_browser_toolbar_title">Select audio</string>
    <string name="sfb_all_media">All Media</string>
    <string name="sfb_no_result_found">No result found</string>
    <string name="sfb_no_results_found_sub_title"><![CDATA[There are no matches with <b>%s</b> in current directory]]></string>
    <string name="this_device_dose_not_have_camera_app">This device does not have camera app</string>
    <string name="sfb_image_editor_label">Edit</string>
    <string name="sfb_edit">Edit</string>
    <string name="sfb_permission_denied">permission denied</string>
    <string name="sfb_android11_storage_restrict_message">Because of Storage restrictions in Android 11 and above, we can not browse files. You can choose %s from system file browser instead.</string>
    <string name="openSystemFileBrowser">open system file browser</string>
    <string name="sfb_files">files</string>
    <string name="openSystemFileBrowser_file">Choose Files</string>
    <string name="sfb_audios">audios</string>
    <string name="openSystemFileBrowser_audios">Choose Audio</string>
    <string name="sfb_pdfs">PDFs</string>
    <string name="openSystemFileBrowser_pdfs">Choose PDF</string>
    <string name="sfb_partial_selection_warning">You\'ve given access to a selected number of photos and videos</string>
    <string name="sfb_manage">Manage</string>
    <string name="sfb_gallery_permission_denied_message">Visual media permission NOT allowed! For better experience allow it.</string>
    <string name="sfb_allow">Allow</string>
    <string name="sfb_file_permission_denied_message">All files permission is NOT allowed! For better experience allow it.</string>
    <string name="sfb_audio_permission_denied_message">Read audio permission is NOT allowed! For better experience allow it.</string>
    <string name="sfb_no_media">No media found.</string>
</resources>