<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:id="@+id/fileBrowser_activity_main_windowRoot"
    tools:context=".acitivties.FileBrowserMainActivity">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fileBrowser_activity_main_contentCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"

        android:layout_marginTop="@dimen/sfb_expanded_margin_top"
        >

        <ir.smartdevelopers.smartfilebrowser.customClasses.RoundViewGroup
            android:id="@+id/fileBrowser_activity_main_contentRootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:topRightRadius="20dp"
            android:topLeftRadius="20dp"
            android:bottomRightRadius="0dp"
            android:bottomLeftRadius="0dp"
            android:clickable="true"
            app:layout_behavior="ir.smartdevelopers.smartfilebrowser.customClasses.MyBehavior"
            android:focusable="true">
            <View
                android:id="@+id/fileBrowser_activity_main_draggingLineView"
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:background="@drawable/sfb_dragging_line_bg"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:id="@+id/sfb_partialSelectionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/sfb_round_rectangle_transparent_black"
                android:backgroundTint="?attr/colorTertiaryFixed"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sfb_txtPermissionMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="?attr/colorOnTertiaryFixed"
                    android:text="@string/sfb_partial_selection_warning"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sfb_btnManagePartialPermission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/sfb_manage"
                    android:textColor="?attr/colorOnTertiaryFixed"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    />
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                >
                <include layout="@layout/container_file_browser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sfb_fragment_gallery_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    />


            </FrameLayout>

        </ir.smartdevelopers.smartfilebrowser.customClasses.RoundViewGroup>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fileBrowser_activity_main_appbar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#fff"
        android:gravity="bottom"
        android:clickable="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sfb_appbarSize"
            android:orientation="horizontal"
            android:layout_gravity="bottom"

            >
            <ImageView
                android:id="@+id/fileBrowser_activity_main_btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/sfb_ic_round_arrow_back"
                android:layout_margin="16dp"
                android:contentDescription="@string/back" />
            <FrameLayout
                android:id="@+id/fileBrowser_activity_main_toolbarPlaceHolder"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="visible"
                />



        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/fileBrowser_activity_main_bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        />
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/fileBrowser_activity_main_selectionContainer"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toTopOf="@id/fileBrowser_activity_main_bottomNavigation"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="8dp"
       android:visibility="invisible"
       android:clipChildren="false"
       >
       <ImageView
           android:id="@+id/fileBrowser_activity_main_imgOk"
           android:layout_width="?attr/actionBarSize"
           android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:srcCompat="@drawable/sfb_ic_circle_tick_filled"
           android:contentDescription="@string/sfb_done"
           android:layout_margin="10dp"

           />
       <View
           android:id="@+id/fileBrowser_activity_main_txtSelectionCountPositionHelper"
           android:layout_width="1dp"
           android:layout_height="1dp"
           app:layout_constraintBottom_toBottomOf="@id/fileBrowser_activity_main_imgOk"
           app:layout_constraintEnd_toEndOf="@id/fileBrowser_activity_main_imgOk"
           android:layout_marginBottom="4dp"
           />
       <TextView
           android:id="@+id/fileBrowser_activity_main_txtSelectionCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:text="1"
           android:textSize="12sp"
           android:maxLines="1"
           app:layout_constraintBottom_toBottomOf="@id/fileBrowser_activity_main_txtSelectionCountPositionHelper"
           app:layout_constraintEnd_toEndOf="@id/fileBrowser_activity_main_txtSelectionCountPositionHelper"
           app:layout_constraintTop_toBottomOf="@id/fileBrowser_activity_main_txtSelectionCountPositionHelper"
           android:background="@drawable/sfb_selected_count_bg"
           android:textColor="@color/white"
           android:paddingStart="7dp"
           android:paddingEnd="7dp"
           android:paddingTop="2dp"
           android:paddingBottom="2dp"
           />
   </androidx.constraintlayout.widget.ConstraintLayout>

   <FrameLayout
       android:id="@+id/fileBrowser_activity_main_albumPlaceHolderRoot"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
       tools:visibility="visible"
       android:translationZ="16dp"

       >
       <FrameLayout
           android:id="@+id/fileBrowser_activity_main_albumPlaceHolder"
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           tools:layout_height="300dp"
           android:maxHeight="500dp"
           android:background="@color/white"

           android:transformPivotX="0dp"
           android:transformPivotY="0dp"
           android:scaleX="0"
           android:scaleY="0"
           tools:scaleX="1"
           tools:scaleY="1"
           android:visibility="invisible"
           tools:visibility="visible"
           android:focusable="true"
           android:translationZ="16dp"
           />
   </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>